tests/cases/compiler-development/artifact/ok/source-map-crlf-template.ari
fn main() -> i64 {
  let value = 3;
  return value;
}
