tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.ari
struct DuplicatePoint {
  x: i64,
}

struct DuplicatePoint {
  y: i64,
}

fn main() -> i64 {
  return 0;
}
